--- a/UnrealLauncher/MainWindow.axaml
+++ b/UnrealLauncher/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ic="using:FluentIcons.Avalonia"
-        xmlns:unrealLauncher="clr-namespace:UnrealLauncher"
+        xmlns:helpers="clr-namespace:UnrealLauncher.Core"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="UnrealLauncher.MainWindow"
         WindowStartupLocation="CenterScreen"
@@ -149,7 +149,7 @@
 
                 <Border Grid.Row="4" Background="{StaticResource SeparatorColor}" Height="0.1" />
                 <Grid Grid.Row="5" Background="{StaticResource Background1Color}" Height="40">
-                    <TextBlock Text="Ver. 0.0.1" VerticalAlignment="Center" HorizontalAlignment="Right"
+                    <TextBlock Text="Ver. 0.0.2" VerticalAlignment="Center" HorizontalAlignment="Right"
                                Margin="0,0,20,0"
                                Foreground="{StaticResource SubFontColor}" FontSize="12" />
                 </Grid>
@@ -157,8 +157,26 @@
 
             <Border DockPanel.Dock="Left" Background="{StaticResource SeparatorColor}" Width="0.1" />
 
-            <TextBlock Text="Projects" DockPanel.Dock="Top" Margin="28,28,0,56" FontSize="28" />
+            <Grid DockPanel.Dock="Top" ColumnDefinitions="Auto,Auto,*,Auto,20,Auto" Margin="28,28,28,46">
+                <Grid.Styles>
+                    <Style Selector="Button">
+                        <Setter Property="Width" Value="88" />
+                        <Setter Property="Height" Value="36" />
+                        <Setter Property="HorizontalContentAlignment" Value="Center" />
+                        <Setter Property="VerticalContentAlignment" Value="Center" />
+                        <Setter Property="BorderThickness" Value="0" />
+                        <Setter Property="Cursor" Value="Hand" />
+                    </Style>
+                    <Style Selector="Button:pointerover ContentPresenter">
+                        <Setter Property="Background" Value="{StaticResource ButtonHoverColor}" />
+                    </Style>
+                </Grid.Styles>
 
+                <TextBlock Grid.Column="0" Text="Projects" FontSize="28" />
+                <Button Grid.Column="3" Content="Open" Background="{StaticResource ButtonBackground}"
+                        Tapped="InputElement_AddProject_OnTapped" />
+                <Button Grid.Column="5" Content="New" Background="#3D77C2" Tapped="InputElement_NewProject_OnTapped" />
+            </Grid>
             <Border DockPanel.Dock="Top" Background="{StaticResource SeparatorColor}" Height="0.1" />
             <Border DockPanel.Dock="Top" Background="{StaticResource Background1Color}" Height="40">
                 <!-- Under development -->
@@ -209,16 +227,16 @@
                             <MenuItem Header="Open" Click="MenuItem_Open_OnClick" />
                             <MenuItem Header="Open in File Explorer" Click="MenuItem_OpenInExplorer_OnClick" />
                             <Separator />
-                            <MenuItem Header="Generate VS project files" Click="MenuItem_GenerateVS_OnClick" />
-                            <MenuItem Header="Switch Unreal Engine version..." Click="MenuItem_SwitchUEVersion_OnClick"/>
+                            <MenuItem Header="Generate .sln file" Click="MenuItem_GenerateVS_OnClick" />
+                            <MenuItem Header="Switch Unreal Engine version..." Click="MenuItem_SwitchUEVersion_OnClick" />
                             <Separator />
-                            <MenuItem Header="Clear all intermediate files" Click="MenuItem_Clear_OnClick" />
+                            <MenuItem Header="Delete cache folders" Click="MenuItem_Clear_OnClick" />
                             <MenuItem Header="Delete" Click="MenuItem_Delete_OnClick" Foreground="Red" />
                         </ContextMenu>
                     </ListBox.ContextMenu>
 
                     <ListBox.ItemTemplate>
-                        <DataTemplate x:DataType="unrealLauncher:UnrealProject">
+                        <DataTemplate x:DataType="helpers:Search+UnrealProject">
                             <Grid ColumnDefinitions="Auto,20,*,20,Auto">
                                 <Border Grid.Column="0" CornerRadius="6" ClipToBounds="True">
                                     <Image Height="50" Width="50" Stretch="UniformToFill"
