--- a/UnrealLauncher/App.axaml
+++ b/UnrealLauncher/App.axaml
@@ -3,17 +3,26 @@
              x:Class="UnrealLauncher.App"
              RequestedThemeVariant="Dark">
 
-    <Application.Styles>
-        <FluentTheme />
-    </Application.Styles>
-
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceInclude Source="Colors.axaml" />
+                <ResourceInclude Source="avares://UnrealLauncher/Styles/Colors.axaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
+
+    <Application.Styles>
+        <FluentTheme />
+
+        <Style Selector="Button">
+            <Setter Property="Background" Value="#88333333" />
+        </Style>
+
+        <StyleInclude Source="avares://UnrealLauncher/Styles/BorderStyles.axaml" />
+        <StyleInclude Source="avares://UnrealLauncher/Styles/ButtonStyles.axaml" />
+        <StyleInclude Source="avares://UnrealLauncher/Styles/ListBoxStyles.axaml" />
+        <StyleInclude Source="avares://UnrealLauncher/Styles/ContextMenuStyles.axaml" />
+    </Application.Styles>
 
     <!-- <TrayIcon.Icons> -->
     <!--     <TrayIcons> -->
