--- a/UnrealLauncher/MainWindow.axaml
+++ b/UnrealLauncher/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="UnrealLauncher.MainWindow"
         WindowStartupLocation="CenterScreen"
-        Width="1000" Height="560"
+        Width="1000" Height="560" Icon="Assets/icon.ico"
         MinWidth="1000" MinHeight="560"
         Title="UnrealLauncher" Background="{StaticResource Background0Color}"
         ExtendClientAreaToDecorationsHint="True"
@@ -77,7 +77,7 @@
 
                 <Border Grid.Row="4" Background="{StaticResource SeparatorColor}" Height="0.1" />
                 <Grid Grid.Row="5" Background="{StaticResource Background1Color}" Height="40">
-                    <TextBlock Text="Ver. 0.0.3" VerticalAlignment="Center" HorizontalAlignment="Right"
+                    <TextBlock Text="Ver. 0.0.4" VerticalAlignment="Center" HorizontalAlignment="Right"
                                Margin="0,0,20,0" Foreground="{StaticResource SubFontColor}"
                                TextDecorations="Underline" Cursor="Hand"
                                FontSize="12" Tapped="InputElement_Version_OnTapped" />
