--- a/UnrealLauncher/Styles/Colors.axaml
+++ b/UnrealLauncher/Styles/Colors.axaml
@@ -1,18 +1,20 @@
 ﻿<ResourceDictionary xmlns="https://github.com/avaloniaui"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Color x:Key="Background0Color">#141414</Color>
-    <Color x:Key="Background1Color">#242424</Color>
-    <Color x:Key="Background2Color">#3E3E3E</Color>
-    <Color x:Key="SeparatorColor">#3A3A3A</Color>
+    <Color x:Key="Background0Color">#131313</Color>
+    <Color x:Key="Background1Color">#191919</Color>
+    <Color x:Key="Background2Color">#222222</Color>
+    <Color x:Key="SeparatorColor">#2A2A2A</Color>
     <Color x:Key="BackgroundTransparentColor">#CC000000</Color>
-    <Color x:Key="SubFontColor">#BEBEBE</Color>
+    <Color x:Key="SubFontColor">#E9E9E9</Color>
     <Color x:Key="ButtonColor">#404040</Color>
-    <Color x:Key="ButtonHoverColor">#575757</Color>
+    <Color x:Key="ButtonHoverColor">#242424</Color>
+    <Color x:Key="ThemeBlueColor">#0A6DC7</Color>
+    
 
-    <Color x:Key="CaptionButtonColor">#333333</Color>
-    <Color x:Key="CaptionButtonPressedColor">#515151</Color>
+    <Color x:Key="CaptionButtonColor">#2B2B2B</Color>
+    <Color x:Key="CaptionButtonPressedColor">#363636</Color>
     <Color x:Key="CaptionButtonCloseButtonColor">#E81123</Color>
-    <Color x:Key="CaptionButtonCloseButtonPressedColor">#92121C</Color>
+    <Color x:Key="CaptionButtonCloseButtonPressedColor">#E81123</Color>
 
 </ResourceDictionary>
