--- a/UnrealLauncher/Styles/ContextMenuStyles.axaml
+++ b/UnrealLauncher/Styles/ContextMenuStyles.axaml
@@ -1,19 +1,21 @@
 ﻿<Styles xmlns="https://github.com/avaloniaui"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    
+
     <Style Selector="ContextMenu.Menu">
         <Setter Property="BorderBrush" Value="{StaticResource SeparatorColor}" />
-        <Setter Property="Width" Value="280" />
+        <Setter Property="Background" Value="{StaticResource Background1Color}" />
+        <Setter Property="Width" Value="220" />
+        <Setter Property="Padding" Value="2, 4" />
     </Style>
     <Style Selector="Separator.Menu">
         <Setter Property="Background" Value="{StaticResource SeparatorColor}" />
-        <Setter Property="Margin" Value="2,3" />
+        <Setter Property="Margin" Value="8,7" />
     </Style>
     <Style Selector="MenuItem.Menu">
         <Setter Property="FontSize" Value="14" />
         <Setter Property="CornerRadius" Value="6" />
-        <Setter Property="Margin" Value="6,2" />
-        <Setter Property="Padding" Value="5" />
+        <Setter Property="Margin" Value="6,0" />
+        <Setter Property="Padding" Value="10, 7" />
         <Setter Property="Cursor" Value="Hand" />
     </Style>
 </Styles>
